// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: PayBagBase
message PayBagBase
{	
	
	
	repeated TPayBagDefine TPayBag = 1; // TPayBag

}

// Defined in table: TPayBag
message TPayBagDefine
{	
	
	
	optional int32 Id = 1; // 序列号
	
	
	optional string Name = 2; // 礼包名
	
	
	optional int32 Push = 3; // 推送类型 1级场破产返回大厅 2初中级场破产返回大厅 3初中级场非破产返回大厅
	
	
	optional int32 Time = 4; // 变量持续时间，0表示只要满足就触发弹窗，1以上表示变量保存天数，超过天数清除变量
	
	
	optional int32 IsBankrupInHigh = 5; 
	
	
	optional int32 IsBankrupInMid = 6; // 高级场破产后，是否在中低级场又破产 0不是1是
	
	
	optional int32 NumOfBankrup = 7; // 在中低级场破产次数 0表示不判定
	
	
	optional int32 RoundNum = 8; // 中低级场局数，0表示不判定
	
	
	optional int32 GoldNum = 9; // 金币数量，0表示不判定
	
	
	optional int32 IsDailyClear = 10; // 购买次数清理0不清 1日清
	
	
	optional int32 IsLimit = 11; // 购买限制次数0不限 其他限制次数
	
	
	repeated int32 AwardId = 12; // 关联的兑换Id

}

